apps/sftpgo/base/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: sftpgo
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: sftpgo
    app.kubernetes.io/version: latest
    app: sftpgo
  name: sftpgo
  namespace: sftpgo
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: sftpgo
      app.kubernetes.io/name: sftpgo
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: sftpgo
        app.kubernetes.io/name: sftpgo
    spec:
      containers:
      - args:
        - sftpgo
        - serve
        image: ghcr.io/drakkan/sftpgo:latest
        imagePullPolicy: IfNotPresent
        livenessProbe:
          httpGet:
            path: /healthz
            port: telemetry
        name: sftpgo
        ports:
        - containerPort: 2022
          name: sftp
          protocol: TCP
        - containerPort: 8080
          name: http
          protocol: TCP
        - containerPort: 10000
          name: telemetry
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /healthz
            port: telemetry
        resources: {}
        securityContext: {}
        volumeMounts:
        - mountPath: /srv/sftpgo
          name: data
          subPath: srv
          readOnly: false
        - mountPath: /var/lib/sftpgo
          name: data
          subPath: lib
          readOnly: false
        - mountPath: /consume
          name: consume
          readOnly: false
        - mountPath: /etc/sftpgo/sftpgo.json
          name: config
          readOnly: true
          subPath: sftpgo.json
      hostNetwork: false
      securityContext: {}
      serviceAccountName: sftpgo
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: sftpgo
        - name: config
          configMap:
            name: sftpgo
        - name: consume
          nfs:
            server: rook-ceph-nfs-load-balancer.rook-ceph.svc.cluster.local
            path: /consume
